--- a/_posts/Garden/User-research/2020-05-25-Personas.md
+++ b/_posts/Garden/User-research/2020-05-25-Personas.md
@@ -4,21 +4,21 @@ categories:
   - Garden
 tags:
   - User research
-date: 2020-05-27
+date: 2020-06-01
 ---
 
 ## About personas
 
 ### Personas as boundary objects
 
-The [Spotfiy article](https://spotify.design/article/the-story-of-spotify-personas) talked about personas being [boundary objects](https://en.wikipedia.org/wiki/Boundary_object). Meaning while there is a core piece of the artifact that is same across different context of uses, but the use depends on the context, possibly the interpretation in the different context. Very similar to how stories work - core is the same but retelling depends on the teller and the listeners. For product organisations this means there is a core part of the persona that stays the same for the whole organisation, but each team will have a different way of understanding. 
+The [Spotfiy article](https://spotify.design/article/the-story-of-spotify-personas) talked about personas being [boundary objects](https://en.wikipedia.org/wiki/Boundary_object). Meaning while there is a core piece of the artifact that is same across different context of uses, but the use depends on the context, possibly the interpretation in the different context. Very similar to how stories work - core is the same but retelling depends on the teller and the listeners. For product organisations this means there is a core part of the persona that stays the same for the whole organisation, but each team will have a different way of understanding.
 
 So:
 
  - We have to make sure the core is very explicit, doesn't leave too much to the imagination.
  - There is space within the persona that teams need to fill out themselves.
- 
-How to do this? Maybe provide space within the description of the persona itself for additional notes (called "team notes" even). Maybe there are 2-3 layers even, core is the same for everyone, 1st layer is different per organisation (for marketing, for product etc) and 2nd layer is different per teams. 
+
+How to do this? Maybe provide space within the description of the persona itself for additional notes (called "team notes" even). Maybe there are 2-3 layers even, core is the same for everyone, 1st layer is different per organisation (for marketing, for product etc) and 2nd layer is different per teams.
 
 ### Personas vs market segments
 
@@ -26,7 +26,7 @@ There seems to be a need to add more data to personas almost to make it a very c
 
 ### Job titles vs "Name, the adjective" scheme
 
-Job titles make the people more concrete, but can go also into the narrative. "... the adjective" helps describing the behavior pattern.
+Job titles make the people more concrete, but can go also into the narrative. This is preferable, since relying just on job titles makes the persona less useful, for example it would restrict recruitment later on. "... the adjective" helps describing the behavior pattern, so seems the better approach even with very job title based (SaaS like) apps.
 
 ## Creating personas
 
