--- a/_posts/Garden/User-research/2020-05-25-Personas.md
+++ b/_posts/Garden/User-research/2020-05-25-Personas.md
@@ -11,7 +11,7 @@ date: 2020-06-01
 
 ### Personas as boundary objects
 
-The [Spotfiy article](https://spotify.design/article/the-story-of-spotify-personas) talked about personas being [boundary objects](https://en.wikipedia.org/wiki/Boundary_object). Meaning while there is a core piece of the artifact that is same across different context of uses, but the use depends on the context, possibly the interpretation in the different context. Very similar to how stories work - core is the same but retelling depends on the teller and the listeners. For product organisations this means there is a core part of the persona that stays the same for the whole organisation, but each team will have a different way of understanding.
+The [Spotify article](https://spotify.design/article/the-story-of-spotify-personas) talked about personas being [boundary objects](https://en.wikipedia.org/wiki/Boundary_object). Meaning while there is a core piece of the artifact that is same across different context of uses, but the use depends on the context, possibly the interpretation in the different context. Very similar to how stories work - core is the same but retelling depends on the teller and the listeners. For product organisations this means there is a core part of the persona that stays the same for the whole organisation, but each team will have a different way of understanding.
 
 So:
 
