--- a/_posts/Garden/2020-11-08-Garden.md
+++ b/_posts/Garden/2020-11-08-Garden.md
@@ -12,4 +12,5 @@ Garden seems to be an emerging trend in thinking, doing knowledge work. It's an 
 ## Links
 
  - [Growing the Evergreens](https://maggieappleton.com/evergreens) - Evergreens is similar to Zettelkasten, differences are: systematic growing of from small ideas to zettels via note types and embedded spaced repetition.
- - [https://nesslabs.com/mind-garden](https://nesslabs.com/mind-garden) -
+ - [https://nesslabs.com/mind-garden](https://nesslabs.com/mind-garden)
+ - [https://zettelkasten.de/introduction/](https://zettelkasten.de/introduction/) - An introduction to the Zettelkasten method.
