--- a/_posts/Garden/2020-11-08-Garden.md
+++ b/_posts/Garden/2020-11-08-Garden.md
@@ -4,7 +4,7 @@ categories:
   - Garden
 tags:
   - Garden
-date: 2021-03-08
+date: 2021-03-07
 ---
 
 Garden seems to be an emerging trend in thinking, doing knowledge work. It's an approach that is described by multiple methodologies or frameworks and all of them are sorta pointing into one direction. The core idea seems to be growing a garden from your knowledge through systematic note taking.
@@ -13,4 +13,4 @@ Garden seems to be an emerging trend in thinking, doing knowledge work. It's an 
 
  - [Growing the Evergreens](https://maggieappleton.com/evergreens) - Evergreens is similar to Zettelkasten, differences are: systematic growing of from small ideas to zettels via note types and embedded spaced repetition.
  - [https://nesslabs.com/mind-garden](https://nesslabs.com/mind-garden)
- - [https://zettelkasten.de/introduction/](https://zettelkasten.de/introduction/4) - An introduction to the Zettelkasten method.
+ - [https://zettelkasten.de/introduction/](https://zettelkasten.de/introduction/) - An introduction to the Zettelkasten method.
