Update and rename 2022-02-20-Welcome-to-9am26.md to 2022-02-19-Welcome-to-9am26.md

--- a/_posts/9am26/2022-02-19-Welcome-to-9am26.md
+++ b/_posts/9am26/2022-02-19-Welcome-to-9am26.md
@@ -1,7 +1,6 @@
 ---
 title: "Welcome to 9am26"
 categories:
-  - Blog
   - Newsletter
 tags:
   - 9am26
@@ -10,7 +9,7 @@ header:
   show_overlay_excerpt: false
 ---
 
-I'm glad you've decided to subscribe to my newsletter on design leadership! I hope you find something worthwhile in each issue that helps you in your daily practice. 
+I'm glad you've subscribed to my newsletter on design leadership! I hope you find something worthwhile in each issue that helps you in your daily practice. 
 
 I'm also keen to hear about your experiences, dilemmas, questions or just chat about design leadership - just reply to any issue, or reach me at [hello@polgarp.com](mailto:hello@polgarp.com) - I answer each to every emails.
 
