--- a/_posts/9am26/2022-02-19-Welcome-to-9am26.md
+++ b/_posts/9am26/2022-02-19-Welcome-to-9am26.md
@@ -9,8 +9,8 @@ header:
   show_overlay_excerpt: false
 ---
 
-I'm glad you've subscribed to my newsletter on design leadership! I hope you find something worthwhile in each issue that helps you in your daily practice. 
+I'm glad you've subscribed to my newsletter on design leadership! I hope you find something worthwhile in each issue that helps you in your daily practice.
 
-I'm also keen to hear about your experiences, dilemmas, questions or just chat about design leadership - just reply to any issue, or reach me at [hello@polgarp.com](mailto:hello@polgarp.com) - I answer each to every emails.
+I'm also keen to hear about your experiences, dilemmas, questions, or just chat about design leadership - just reply to any issue, or reach me at [hello@polgarp.com](mailto:hello@polgarp.com) - I answer each and every email.
 
 While I'm preparing the next issue, take a look at the [9am26 archive](https://polgarp.com/categories/newsletter/).
