Fixed all internal links

--- a/_posts/9am26/2022/2022-02-19-Welcome-to-9am26.md
+++ b/_posts/9am26/2022/2022-02-19-Welcome-to-9am26.md
@@ -13,4 +13,4 @@ I'm glad you've subscribed to my newsletter on design leadership! I hope you fin
 
 I'm also keen to hear about your experiences, dilemmas, questions, or just chat about design leadership - just reply to any issue, or reach me at [hello@polgarp.com](mailto:hello@polgarp.com) - I answer each and every email.
 
-While I'm preparing the next issue, take a look at the [9am26 archive](https://polgarp.com/categories/newsletter/).
+While I'm preparing the next issue, take a look at the [9am26 archive]({% link _pages/newsletter.md %}).
